--- a/scrumboard.html
+++ b/scrumboard.html
@@ -70,6 +70,7 @@ var sprint = [
 	new item('Basis-Einheiten', 'Eigene Einheiten definieren (Generäle nicht vergessen)'),
 ];
 var backlog = [
+	new item('Auswahl Dialog', 'Auswahl Dialog für Einheiten als Eingang für den Kampfsimulator'),
 	new item('Objektmodell Kampf', 'Objektmodell für Kampfsystem erarbeiten'),
 	new item('Basis-Kampf', 'Eigene Einheiten gegeneinander kämpfen lassen'),
 	new item('Einheiten Selektor', 'Wählt aus zwei Armeen diejenigen Einheiten aus, die als nächstes gegeneinander kämpfen'),
