--- a/kampfsimTest.html
+++ b/kampfsimTest.html
@@ -8,7 +8,11 @@
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
 	<script src="http://code.jquery.com/qunit/qunit-1.14.0.js"></script>
+	<script src="lib/jquery-1.11.1.min.js"></script>
+	
 	<script src="kampfsim.js"></script>
 	<script src="kampfsimTest.js"></script>
+	<script src="html.js"></script>
+	<script src="htmlTest.js"></script>
 </body>
 </html>
