--- a/kampfsim.html
+++ b/kampfsim.html
@@ -5,6 +5,7 @@
 	<script src="lib/jquery-1.11.1.min.js"></script>
 	<script src="lib/jquery-ui-1.11.0/jquery-ui.min.js"></script>
 	<link rel="stylesheet" href="lib/jquery-ui-1.11.0/jquery-ui.min.css">
+	<script src="html.js"></script>
 	<script src="kampfsim.js"></script>
 	<script src="kampfsim-ui.js"></script>
 </head>
