--- a/scrumboard.html
+++ b/scrumboard.html
@@ -75,16 +75,17 @@ var done = [
 	new item('Backlog', 'Diese Seite erstellen'),
 	new item('Objektmodell Basis-Einheiten', 'Objektmodell für Basis-Einheiten erarbeiten'),
 	new item('Basis-Einheiten', 'Eigene Einheiten definieren (Generäle nicht vergessen)'),
-];
-var sprint = [
 	new item('Auswahl Dialog', 'Auswahl Dialog für Einheiten als Eingang für den Kampfsimulator'),
 ];
+var sprint = [
+	new item('Einheiten in UI konfigurieren', "Einheiten in der UI definieren die gegeneinander kämpfen sollen. Anzahl, Gegner")
+];
 var backlog = [
-	new item('Objektmodell Kampf', 'Objektmodell für Kampfsystem erarbeiten'),
 	new item('Basis-Kampf', 'Eigene Einheiten gegeneinander kämpfen lassen'),
+	new item('Generäle separat', 'Generäle nicht bis 250 auswählbar machen sondern darüber'),
+	new item('Objektmodell Kampf', 'Objektmodell für Kampfsystem erarbeiten'),
 	new item('Einheiten Selektor', 'Wählt aus zwei Armeen diejenigen Einheiten aus, die als nächstes gegeneinander kämpfen'),
 	new item('Visualisierung', 'Ergebnisse der Kämpfe visualisieren'),
-	new item('Einheiten in UI konfigurieren', "Einheiten in der UI definieren die gegeneinander kämpfen sollen. Anzahl, Gegner")
 ];
 
 print("Sprint", sprint);
