--- a/fightsimTest.html
+++ b/fightsimTest.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>KampfSim::Test</title>
+	<title>FightSim::Test</title>
 	<link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.14.0.css">
 </head>
 <body>
@@ -10,9 +10,10 @@
 	<script src="http://code.jquery.com/qunit/qunit-1.14.0.js"></script>
 	<script src="lib/jquery-1.11.1.min.js"></script>
 	
-	<script src="kampfsim.js"></script>
-	<script src="kampfsimTest.js"></script>
+	<script src="fightsim.js"></script>
+	<script src="fightsimTest.js"></script>
 	<script src="html.js"></script>
+	<script src="units.js"></script>
 	<script src="htmlTest.js"></script>
 </body>
 </html>
