--- a/scrumboard.html
+++ b/scrumboard.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>KampfSim::Scrumboard</title>
+	<title>FightSim::Scrumboard</title>
 	<script src="lib/jquery-1.11.1.min.js"></script>
 	<style>
 	body {
